--- a/feature.html
+++ b/feature.html
@@ -6,7 +6,7 @@
     <title>Basic HTML Page</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to GitHub Training</h1>
     <p>This is a simple HTML page.</p>
 </body>
 </html>
